Solved the overflow problem

--- a/page.css
+++ b/page.css
@@ -8,6 +8,8 @@
 
 body{
     background: linear-gradient(rgb(252, 166, 181), white);
+      overflow-x: hidden;
+
 }
 
 /* Navbar */
